my-apps/trilium/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  namespace: trilium
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: trilium
