my-apps/trilium/httproute.yaml
# File: trilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trilium
  namespace: trilium
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "notes.homelabjunkie.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: trilium
          port: 8080
